# rhythm-trainer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build-universal.yml
src/rhythm-trainer/: .config.yaml  exercises.csv  gui.py  main.py  style.qss
src/rhythm_trainer/: __init__.py  config.py  exercises.py  gui.py  i18n.py  logger.py  main.py  tracks.py  utils.py
src/rhythm_trainer/gui/: main_window.py  modes.py  settings_dialog.py  style.qss  widgets.py
src/rhythm_trainer/locale/it/LC_MESSAGES/: rhythm_trainer.po
tests/: conftest.py  test_config.py  test_exercises.py  test_i18n.py  test_logger.py  test_tracks.py  test_utils.py
tests/gui/: test_modes.py  test_settings_dialog.py  test_widgets.py
