[project]
name = "rhythm-trainer"
version = "0.1.0"
description = "Random exercise picker with weighted extraction"
readme = "README.md"
authors = [
    { name = "Francesco Marchisotti", email = "francesco.marchisotti@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "rhythm-trainer",
]

[tool.uv.sources]
rhythm-trainer = { workspace = true }
