[project]
name = "rhythm-trainer"
version = "0.1.0"
description = "Random exercise picker with weighted extraction"
readme = "README.md"
authors = [
    { name = "Francesco Marchisotti", email = "francesco.marchisotti@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.3.8",
    "pyqt6>=6.9.1",
    "pyyaml>=6.0.2",
]

[project.gui-scripts]
gui = "rhythm_trainer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=rhythm_trainer --cov-report=html"
testpaths = ["tests"]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.ruff]
extend = "~/.config/ruff/ruff.toml"

[tool.ruff.lint]
ignore = [
    "G004",  # logging-f-string
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # Ignore use of assert in tests
    "ARG",   # flake8-unused-arguments
    "FBT",   # flake8-boolean-trap
    "PLR2004",  # magic-value-comparison
    "S311",  # suspiciuous-non-cryptographic-random-usage
]
